--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -163,13 +163,13 @@
   }
   .intro .imgr img {
     max-width: 100%;
-    height: 80%;
-    margin-bottom:-5%;
+    height: 70%;
+    margin-top:10%;
     border-radius: 8px;
-    margin-bottom: 20px;
   }
   .intro-content {
     text-align: left;
+    margin-top:-10%;
   }
   .intro-content h2 {
     font-size: 24px;
@@ -310,7 +310,7 @@
   </section>
   <section class="intro">
     <div class="imgr">
-      <img src="/uploads/TMS5.png" alt="Illustration" />
+      <img src="/uploads/logo.jpg" alt="Illustration" />
     </div>
     <div class="intro-content">
       <h2>Why Choose TMS?</h2>
